# nlp

./: .env  MANIFEST.in  config.py  manage.py  requirements.txt  setup.cfg
migrations/versions/: 9d3493d4f28c_.py  ba5e0b24fb60_.py
nlp/: __init__.py
nlp/models/: Books.py  Search.py
nlp/route/: main_landing.py
nlp/static/css/: main.css
nlp/static/fonts/: poppins.css
nlp/static/upload/: The_Case_for_Keto_Gary_Taubes.epub
nlp/templates/main/: databse.html  index.html  list_book.html  search.html  search_database.html
